# 42_python_for_ds

./: .gitignore  requirements.txt  setup_venv.sh
python00/ds00_venv/: pyvenv.cfg
python00/ex00/: Hello.py
python00/ex01/: format_ft_time.py
python00/ex02/: find_ft_type.py
python00/ex03/: NULL_not_found.py
python00/ex04/: whatis.py
python00/ex05/: building.py
python00/ex06/: filterstring.py  ft_filter.py
python00/ex07/: sos.py
python00/ex08/: Loading.py
python00/ex09/: LICENSE  README.md  pyproject.toml  setup.py
python00/ex09/ft_package/: __init__.py  count_in_list.py
python01/: requirements.txt  setup_venv.sh
python01/ex00/: give_bmi.py
python01/ex01/: array2D.py
python01/ex02/: load_image.py
python01/ex03/: zoom.py
python01/ex04/: rotate.py
python01/ex05/: load_image.py  pimp_image.py  show.py
python02/: requirements.txt  setup_venv.sh
python02/ex00/: load_csv.py
python02/ex01/: aff_life.py  load_csv.py
python02/ex02/: aff_pop.py
python02/ex03/: projection_life.py
python03/: setup_venv.sh
python03/ex00/: S1E9.py
