[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ft_package"
authors = [{name = "jgoldste", email = "jgoldste@student.42bangkok.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/yuran653/42_python_for_ds/tree/main/python00/ex09"
